--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,12 @@
   
 }
 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -90,6 +96,15 @@ code {
 
 .card-transition:hover {
   transform: scale(1.05);
+}
+
+.badge-blue{
+  background-color: rgb(219 234 254 / 1);
+  color: rgb(30 64 175 );
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  
 }
 
 /*======================================================== scrollBar ===========================================================*/
@@ -175,6 +190,56 @@ form label{
   font-weight:600;
 }
 
+.Step-blue{
+  background-color: rgba(221, 230, 250, 0.671);
+  color: rgb(37 99 235);
+  height: 80px;
+  width: 80px; 
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Step-green{
+  background-color: rgba(199, 253, 198, 0.671);
+  color: rgb(18, 180, 16);
+  height: 80px;
+  width: 80px; 
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Step-purple{
+  background-color: rgba(231, 211, 246, 0.651);
+  color: rgb(129, 12, 213);
+  height: 80px;
+  width: 80px; 
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Feature-examee .svg-blue{
+  color:rgb(37 99 235);
+}
+
+.Feature-examee .svg-green{
+  color:rgb(18, 180, 16);
+}
+
+.Feature-examee .svg-purple,
+.text-purple{
+  color:rgb(129, 12, 213);
+}
+
+.Feature-examee .svg-red{
+  color:rgb(190, 15, 15);
+}
+
 
 /*=========================================================== notes component css ==============================================*/
 .notes-heroSection{
@@ -183,7 +248,8 @@ form label{
 .notes-span-section{
   color: var(--primary-white) ;
 }
-.notes-item{
+.notes-item,
+.team{
   background: var(--card-item-bg) ;
 }
 
