--- a/client/src/index.css
+++ b/client/src/index.css
@@ -382,6 +382,11 @@ form label {
   color: rgb(180, 180, 180);
 }
 
+/*=========================================================== Dashbord ===============================================*/
+.bg-darkgray{
+  background-color: rgb(35, 35, 35);;
+}
+
 /*=========================================================== media Queri ===============================================*/
 @media only screen and (max-width: 770px) {
   /* Notes section */
