fix dashbord user setting  section

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,6 +104,11 @@ code {
   color: #039419;
 }
 
+.placeholder-white::placeholder{
+  color: rgba(180, 178, 178, 0.677);
+  font-size: small;
+}
+
 /*======================================================== scrollBar ===========================================================*/
 
 .scrollable {
