--- a/client/src/index.css
+++ b/client/src/index.css
@@ -407,7 +407,8 @@ form label {
 
 .dashbord-mobilebar-btn{
   position: fixed;
-  top: 75px;
+  top: 10px;
+  z-index: 1025;
   right: 10px;
   border-radius: 8px;
 }
